# git-mob

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  prepare-commit-msg
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release-please.yml  release.yml
docs/: manual_setup.md
src/: cli.rs  coauthor_repo.rs  handlers.rs  helpers.rs  lib.rs  main.rs  with.rs
src/commands/: coauthor.rs  mob.rs  mod.rs  prepare-commit-msg  prepare-commit-msg.local  setup.rs  team_member.rs
src/handlers/: mod.rs  with.rs
src/repositories/: mob_session_repo.rs  mod.rs  team_member_repo.rs
tests/: coauthor.rs  help.rs  mob.rs  prepare_commit_msg.rs  setup.rs  team_member.rs
tests/common/: mod.rs
tests/helpers/: mod.rs  test_contexts.rs
