[package]
name = "git-mob-tool"
version = "1.5.4"
authors = ["Mubashwer Salman Khurshid"]
edition = "2021"
description = "A CLI app which can help users automatically add co-author(s) to git commits for pair/mob programming"
readme = "README.md"
repository = "https://github.com/Mubashwer/git-mob"
license = "MIT"
keywords = [
  "git",
  "cli",
  "pair-programming",
  "mob-programming"
]
categories = ["command-line-interface", "command-line-utilities"]
include = [
  "src/**/*",
  "Cargo.lock",
  "Cargo.toml",
  "LICENSE",
  "prepare-commit-msg",
  "README.md"
]

[[bin]]
name = "git-mob"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
inquire = "0.6.2"

[dev-dependencies]
assert_cmd = "2.0.12"
mockall = "0.12.1"
once_cell = "1.19.0"
predicates = "3.1.0"
tempfile = "3.10.1"
test-context = "0.3.0"

[target.'cfg(unix)'.dev-dependencies]
rexpect = "0.5.0"
