[package]
name = "git-mob-tool"
version = "1.8.0"
authors = ["Mubashwer Salman Khurshid"]
edition = "2021"
description = "A CLI app which can help users automatically add co-author(s) to git commits for pair/mob programming"
readme = "README.md"
repository = "https://github.com/Mubashwer/git-mob"
license = "MIT"
keywords = [
  "git",
  "cli",
  "pair-programming",
  "mob-programming"
]
categories = ["command-line-interface", "command-line-utilities"]
include = [
  "src/**/*",
  "Cargo.lock",
  "Cargo.toml",
  "LICENSE",
  "prepare-commit-msg",
  "README.md"
]

[[bin]]
name = "git-mob"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
home = "0.5.11"
inquire = "0.7.5"

[dev-dependencies]
assert_cmd = "2.0.16"
mockall = "0.13.1"
once_cell = "1.21.1"
predicates = "3.1.2"
tempfile = "3.18.0"
test-context = "0.4.1"

[target.'cfg(unix)'.dev-dependencies]
rexpect = "0.6.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/git-mob-{ target }.tar.gz"
pkg-fmt = "tgz"